# cookiecutter-pypackage

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
