[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[project]
name = '{{ cookiecutter.project_slug }}'
description="{{ cookiecutter.project_short_description }}"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ['{{ cookiecutter.project_slug }}']
license = {text = "{{ cookiecutter.open_source_license }}"}
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}'
{%- endif %}
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.optional-dependencies]
tests = [
{% if cookiecutter.use_pytest == 'y' -%}
    'pytest==7.2.0',{% endif %}
]
dev = [
    'pip',
    'wheel==0.38.4',
    'watchdog==2.2.0',
    'flake8==6.0.0',
    'coverage==7.0.0',
    'Sphinx==5.3.0',
{% if cookiecutter.command_line_interface|lower == 'click' -%}
    'Click==8.1.3',{% endif %}
{% if cookiecutter.use_black == 'y' -%}
    'black==22.12.0',{% endif %}
]


[tool.setuptools_scm]
write_to = "src/{{ cookiecutter.project_slug }}/_version.py"

{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
{%- endif %}

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/